--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
-strum = { version = "0.20", features = ["derive"] }
+serde = { version = "1.0.130", features = ["derive"] }
+strum = { version = "0.23.0", features = ["derive"] }
+either = { version = "1.6.1", features = ["serde"] }
 
 # these deps are needed when building a client
-reqwest = { version = "^0.11", features=["json"], optional=true}
-tokio = { version = "1", features=["full"], optional=true}
+reqwest = { version = "0.11.6", features = ["json"], optional = true }
+tokio = { version = "1.14.0", features = ["full"], optional = true }
 
 [features]
 client = ["reqwest", "tokio"]
